trash: Support enumerating non-UTF-8 filenames

Before when enumerating, display names were set directly from the
filenames which can be a problem if the filename is not UTF-8.
Instead, don't set the display name at all since it is set correctly via
trash_backend_add_info().

https://bugzilla.gnome.org/show_bug.cgi?id=656186